profilelist1exp/unpackaged/objects/Partner_Request__c.object
<CustomObject>
    <fields>
        <fullName>Distributor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>We focus on distributing HW/SW &amp; Solutions via our tier 2 of network providers</inlineHelpText>
        <label>Distributor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diverse_Owned_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Replicate to Account Partner Track field</description>
        <label>Diverse Owned Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diversity_Certification__c</fullName>
        <description>Replicate to AccountPartnerTrack Object field</description>
        <label>Diversity Certification</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alaska Native Owned Corporation</fullName>
                </value>
                <value>
                    <fullName>Certified Small Disadvantaged Businesses</fullName>
                </value>
                <value>
                    <fullName>Economically Disadvantaged Women-Owned Small</fullName>
                </value>
                <value>
                    <fullName>HUB Zone</fullName>
                </value>
                <value>
                    <fullName>Large Business</fullName>
                </value>
                <value>
                    <fullName>Minority Owned</fullName>
                </value>
                <value>
                    <fullName>National LGBT Chamber of Commerce</fullName>
                </value>
                <value>
                    <fullName>National Minority Development Council</fullName>
                </value>
                <value>
                    <fullName>National veteran Business Development Council</fullName>
                </value>
                <value>
                    <fullName>Service-Disabled Veteran Owned Small Business</fullName>
                </value>
                <value>
                    <fullName>Small Business</fullName>
                </value>
                <value>
                    <fullName>Veteran-Owned Small Business</fullName>
                </value>
                <value>
                    <fullName>Women’s Business Enterprise National Council</fullName>
                </value>
                <value>
                    <fullName>Women-Owned Small Businesses</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_Business_As_CF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does Business As CF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Does_Business_As_HK__c</fullName>
        <description>Used in place of trading as for hong kong country</description>
        <label>Does Business As HK</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Does_Business_As__c</fullName>
        <description>Could be separate from Legal Name- Often used in the US for a &quot;Marketing&quot; name (Used in the Partner Registration form)</description>
        <label>Does Business As</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domestic_Ultimate_Company_Name__c</fullName>
        <description>Highest parent owner in country of the company</description>
        <label>Domestic Ultimate Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domestic_Ultimate_Country__c</fullName>
        <description>Country of the highest parent owner in country of the company</description>
        <label>Domestic Ultimate Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domestic_Ultimate_DUNS__c</fullName>
        <description>DUNS of the highest parent owner in country of the company</description>
        <label>Domestic Ultimate DUNS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dun_and_Bradstreet_DUNS_Number__c</fullName>
        <description>Dun and Bradstreet DUNS Number</description>
        <label>Dun and Bradstreet DUNS Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Duplicate Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Requests (Duplicate Account)</relationshipLabel>
        <relationshipName>R00N70000002MeYTEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duplicate_PRs__c</fullName>
        <label>Duplicate PRs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Registration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Duplicate Registration</label>
        <referenceTo>Partner_Request__c</referenceTo>
        <relationshipLabel>Partner Requests</relationshipLabel>
        <relationshipName>R00N70000002MeYYEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EMC_Attributes_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EMC Attributes Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Education_Training__c</fullName>
        <description>Please indicate how you deliver the following services to your customers</description>
        <label>Education/Training</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deliver</fullName>
                </value>
                <value>
                    <fullName>Resell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eligible_Partner_Tracks__c</fullName>
        <label>Eligible Partner Tracks</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_CF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Email CF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF - Y - PRM English Partner Registration Duplicate;PRM English Partner Registration Incomplete;PRM English Partner Registration Submitted;PRM English Partner Registration Rejected/ APP/ FU / OM - N ||Email alert-Y-PRM English Partner Registration Duplicate;PRM English Partner Registration Incomplete;PRM English Partner Registration Submitted;PRM English Partner Registration Rejected
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enable_Order_Management_access_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Order Management access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Partner_Group_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Partner Group Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Premier_Pages_access_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Premier Pages access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_as_Lead_Super_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable as Lead Super User?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_as_Partner_Admin_CF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Enable as Partner Admin CF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_as_Partner_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Enable as Partner Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_for_Bid_Builder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable for Bid Builder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_notifications_about_Channel_Leads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable notifications about Channel Leads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_notifications_about_Chnl_Leads_CF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable notifications about Chnl Leads CF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End Customer</label>
        <referenceTo>End_Customer__c</referenceTo>
        <relationshipLabel>Partner Requests</relationshipLabel>
        <relationshipName>Partner_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entity_Addr_1_D_B__c</fullName>
        <description>D&amp;B validated entity details</description>
        <label>Entity Addr 1 - D&amp;B</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Addr_2_D_B__c</fullName>
        <description>D&amp;B validated entity details</description>
        <label>Entity Addr 2 - D&amp;B</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Addr_City_D_B__c</fullName>
        <description>D&amp;B validated entity details</description>
        <label>Entity Addr City - D&amp;B</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Addr_Country_D_B__c</fullName>
        <description>D&amp;B validated entity details</description>
        <label>Entity Addr Country - D&amp;B</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Addr_Postal_Code_D_B__c</fullName>
        <description>D&amp;B validated entity details</description>
        <label>Entity Addr Postal Code - D&amp;B</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Addr_State_D_B__c</fullName>
        <description>D&amp;B validated entity details</description>
        <label>Entity Addr State - D&amp;B</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Load_Date__c</fullName>
        <description>Date company was loaded into D&amp;B Compliance Check tool</description>
        <label>Entity Load Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entity_Name_D_B__c</fullName>
        <description>D&amp;B validated entity details</description>
        <label>Entity Name -D&amp;B</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Primary_Contact_Email_ID__c</fullName>
        <description>D&amp;B validated entity details</description>
        <label>Entity - Primary Contact Email ID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Entity_Secondary_Contact_Email_ID__c</fullName>
        <description>D&amp;B validated entity details</description>
        <label>Entity - Secondary Contact Email ID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Export_Compliance_Agreed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Export Compliance Agreed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Export_Compliance_Check_Is_Complete_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Check Export Compliance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facebook__c</fullName>
        <label>Facebook</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Fax_CF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Fax CF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Feature_Request_Deal_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feature Request: Deal Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feature_Request_Lead_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feature Request: Lead Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feature_Request_MDF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feature Request:MDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feature_Request_Partner_Finder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feature Request: Partner Finder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feature_Request_Rebates_CF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feature Request Rebates CF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feature_Request_Rebates__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Auto-populated based on activity of Partner Admin in Partner self-service.</inlineHelpText>
        <label>Feature Request:Rebates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feature_Request_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feature Request: Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financing_Options_Non_GC__c</fullName>
        <label>Financing Options</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, please contact me</fullName>
                </value>
                <value>
                    <fullName>I am currently using Dell EMC Financing</fullName>
                </value>
                <value>
                    <fullName>Maybe later</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financing_Options__c</fullName>
        <label>Financing Options?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, please contact me</fullName>
                </value>
                <value>
                    <fullName>I am currently using Dell Financing</fullName>
                </value>
                <value>
                    <fullName>Maybe later</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Name_CF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>First Name CF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_of_Organization_CF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form of Organization CF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_of_Organization__c</fullName>
        <description>Legal set up for company, i.e. Limited Partnership vs. publicly traded company (Used in the Partner Registration form)</description>
        <label>Form of Organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>Sole Proprietorship</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>Limited Partnership</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Company</fullName>
                </value>
                <value>
                    <fullName>Unlimited Liability Company</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FromInvitation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From Invitation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GU_HQ_DUNSAddress__c</fullName>
        <label>GU/HQ_DUNSAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GU_HQ_DUNSBusinessName__c</fullName>
        <label>GU/HQ_DUNSBusinessName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GU_HQ_DUNSCity__c</fullName>
        <label>GU/HQ_DUNSCity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GU_HQ_DUNSCountry__c</fullName>
        <label>GU/HQ_DUNSCountry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GU_HQ_DUNSID__c</fullName>
        <label>GU/HQ_DUNSID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GU_HQ_DUNSPostalCode__c</fullName>
        <label>GU/HQ_DUNSPostalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GU_HQ_DUNSState__c</fullName>
        <label>GU/HQ_DUNSState</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hardware_Laptop_Desktop_Tablet_Revenue__c</fullName>
        <label>Hardware-Laptop/Desktop/Tablet Revenue%?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-10%</fullName>
                </value>
                <value>
                    <fullName>11-20%</fullName>
                </value>
                <value>
                    <fullName>21-30%</fullName>
                </value>
                <value>
                    <fullName>31-40%</fullName>
                </value>
                <value>
                    <fullName>41-50%</fullName>
                </value>
                <value>
                    <fullName>51-60%</fullName>
                </value>
                <value>
                    <fullName>61-70%</fullName>
                </value>
                <value>
                    <fullName>71-80%</fullName>
                </value>
                <value>
                    <fullName>81-90%</fullName>
                </value>
                <value>
                    <fullName>91-100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hardware_Reseller__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hardware Reseller</description>
        <inlineHelpText>We focus on filling hardware orders for our customers.</inlineHelpText>
        <label>Hardware Reseller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hardware_Revenue_Percent_CF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Hardware Revenue Percent CF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hardware_Revenue_Percent__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Hardware Revenue Percent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-10%</fullName>
                </value>
                <value>
                    <fullName>11-20%</fullName>
                </value>
                <value>
                    <fullName>21-30%</fullName>
                </value>
                <value>
                    <fullName>31-40%</fullName>
                </value>
                <value>
                    <fullName>41-50%</fullName>
                </value>
                <value>
                    <fullName>51-60%</fullName>
                </value>
                <value>
                    <fullName>61-70%</fullName>
                </value>
                <value>
                    <fullName>71-80%</fullName>
                </value>
                <value>
                    <fullName>81-90%</fullName>
                </value>
                <value>
                    <fullName>91-100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hardware_Server_Storage_Networking_Reven__c</fullName>
        <label>Hardware Server Storage Networking Reven</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-10%</fullName>
                </value>
                <value>
                    <fullName>11-20%</fullName>
                </value>
                <value>
                    <fullName>21-30%</fullName>
                </value>
                <value>
                    <fullName>31-40%</fullName>
                </value>
                <value>
                    <fullName>41-50%</fullName>
                </value>
                <value>
                    <fullName>51-60%</fullName>
                </value>
                <value>
                    <fullName>61-70%</fullName>
                </value>
                <value>
                    <fullName>71-80%</fullName>
                </value>
                <value>
                    <fullName>81-90%</fullName>
                </value>
                <value>
                    <fullName>91-100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hardware_warranty_Break_fix_support__c</fullName>
        <description>Please indicate how you deliver the following services to your customers</description>
        <label>Hardware warranty(Break/fix support)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deliver</fullName>
                </value>
                <value>
                    <fullName>Resell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_read_the_Partner_Program_Guide__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Have read the Partner Program Guide</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISDUNSUpdated__c</fullName>
        <description>Partner Registration DUNS validation</description>
        <label>System Validated DUNS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISDUNSValidated__c</fullName>
        <formula>AND (Dun_and_Bradstreet_DUNS_Number__c != ISDUNSUpdated__c, !ISBlank(ISDUNSUpdated__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISDUNSUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ISV</description>
        <inlineHelpText>We specialize in making or selling software designed for mass or niche markets.</inlineHelpText>
        <label>ISV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incomplete_Description__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Incomplete Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incomplete_Registration_Security_Token__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Incomplete Registration Security Token</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Principals__c</fullName>
        <label>Individual Principals</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Instagram__c</fullName>
        <label>Instagram</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Installation_Deployment_Services_Market__c</fullName>
        <description>Please indicate how you deliver the following services to your customers</description>
        <label>Installation/Deployment Services Market</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Installation_Deployment_Services__c</fullName>
        <description>Please indicate how you deliver the following services to your customers</description>
        <label>Installation/Deployment Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deliver</fullName>
                </value>
                <value>
                    <fullName>Resell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intrested_in_learning_Dell_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Are you interested in learning more about Dell services? </description>
        <label>Intrested in learning Dell Services?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsValidatedAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Partner Registration AVS check</description>
        <label>IsValidatedAddress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Authenticated_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Authenticated PR Form</description>
        <label>Is Authenticated Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Enabled_for_Incentives_CF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>14.2 SSO CR#-7852</description>
        <label>Enabled for Incentives CF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Enabled_for_Incentives__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incentives Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Category_Non_GC__c</fullName>
        <label>Job Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Facilities</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Category__c</fullName>
        <label>Job Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Executives</fullName>
                </value>
                <value>
                    <fullName>Facilities</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>H/R</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>